RESOLVED FIXED103136
[Qt] GraphicsContext3DQt makes wrong surface current.
https://bugs.webkit.org/show_bug.cgi?id=103136
Summary [Qt] GraphicsContext3DQt makes wrong surface current.
Zeno Albisser
Reported 2012-11-23 06:33:23 PST
[Qt] GraphicsContext3DQt makes wrong surface current.
Attachments
Patch (1.76 KB, patch)
2012-11-23 06:37 PST, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2012-11-23 06:37:35 PST
Zeno Albisser
Comment 2 2012-11-23 07:35:39 PST
Comment on attachment 175796 [details] Patch Clearing flags on attachment: 175796 Committed r135611: <http://trac.webkit.org/changeset/135611>
Zeno Albisser
Comment 3 2012-11-23 07:35:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.