[Qt] GraphicsContext3DQt makes wrong surface current. https://bugs.webkit.org/show_bug.cgi?id=103136

blitMultisampleFramebufferAndRestoreContext restores
the wrong surface in case the currentContext is the same
as m_platformContext.
In this case we would reset the bound surface to NULL.
Instead we should just leave the context unchanged.

Reviewed by Kenneth Rohde Christiansen.

* platform/graphics/qt/GraphicsContext3DQt.cpp:
(WebCore::GraphicsContext3DPrivate::blitMultisampleFramebufferAndRestoreContext):

Canonical link: https://commits.webkit.org/121272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135611 268f45cc-cd09-0410-ab3c-d52691b4dbfc